# treefold

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  instructions.md
assets/: treefold.icns
scripts/: build_apple_silicon_app.sh  build_gui_apple_silicon_app.sh  check_gui_targets.sh  generate_macos_icon.sh
src/: app.rs  cli.rs  fs_scan.rs  gui.rs  gui_heatmap.rs  input.rs  layout.rs  lib.rs  main.rs  os_actions.rs  state.rs  treemap.rs  ui.rs
tests/: integration.rs
