[package]
name = "treefold"
version = "0.1.0"
edition = "2024"
default-run = "treefold"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
iced = { version = "0.14.0", features = ["canvas"] }
ratatui = "0.30.0"
rfd = "0.17.2"
thiserror = "2.0.18"
unicode-width = "0.2.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
